# companycam-photo-detection

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
backend/: DATABASE_README.md  Dockerfile  README.md  alembic.ini  coverage.xml  pyproject.toml  requirements-dev.txt  requirements.txt  test_material_basic.py
backend/alembic/: env.py
backend/alembic/versions/: 021ea44f4185_add_processing_jobs_table.py  c543a6160afc_add_photo_status_field.py  d1bd209248c8_add_password_hash_to_users.py  d5509983c481_add_detection_results_tables.py  (+1 more)
backend/config/: init.sql  rabbitmq-init.sh  rls-policies.sql
backend/data/: brands.json  materials.json  reference_objects.json
backend/scripts/: seed_data.py
backend/src/: __init__.py  config.py  database.py  main.py
backend/tests/: __init__.py  conftest.py  test_auth_api.py  test_auth_service.py  test_brand_detector.py  test_damage_detection_service.py  test_damage_detector.py  test_damage_pipeline.py  test_damage_segmentation.py  test_damage_severity.py  test_depth_estimator.py  test_detection_storage_service.py  test_engine_clients.py  test_exif_service.py  test_health_api.py  test_main.py  test_material_counter.py  test_material_database.py  test_material_detector.py  test_material_pipeline.py  test_material_segmentation.py  test_message_schema.py  test_models.py  test_orchestrator_api.py  test_orchestrator_metrics.py  test_orchestrator_service.py  test_photo_api.py  test_processing_job_service.py  test_projects_api.py  test_quantity_validation.py  test_queue_service.py  test_report_generation.py  test_results_aggregation_service.py  test_retry_manager.py  test_s3_service.py  test_scale_detector.py  test_tags_service.py  test_user_feedback_service.py  test_volume_calculator.py  test_volume_pipeline.py  (+1 more)
(+122 files in other folders)
